Created attachment 85534 [details] dmesg: monitor fail to display after resuming from S3 Environment: ---------------------------- Kernel: (drm-intel-next-queued)da66146425c3136943452988afd3d64cd551da58 Author: Mika Kuoppala <mika.kuoppala@linux.intel.com> Date: Fri Sep 6 16:03:28 2013 +0300 drm/i915: include hangcheck action and score in error_state lspci: ---------------------------- 00:02.0 VGA compatible controller: Intel Corporation ValleyView Gen7 (rev 0a) Description && Steps: ---------------------------- 1. Boot up machine, and the monitor displayed well. 2. Then do S3(echo mem >/sys/power/state), push the power button to resume. 3. After machine resumed successfully and can be connected, but the monitor is black screen. 4. removed i915, this issue also exists. 5. Other platforms don't have this problem.
Does this happen for all types of output (DP, VGA, HDMI, eDP) or just a few? For external outputs, does it also happen with different monitor models with the same connector type? Note: In dmesg we have tons of DP link train failures, so I guess this is about DP.
Created attachment 85539 [details] dmesg: remove i915 have the same issue I append the dmesg without i915 loaded here.
(In reply to comment #1) > Does this happen for all types of output (DP, VGA, HDMI, eDP) or just a few? > For external outputs, does it also happen with different monitor models with > the same connector type? > > Note: In dmesg we have tons of DP link train failures, so I guess this is > about DP. eDP && VGA pipe: I tried it on different monitor, all of them have the same issue. DP && HDMI pipe: These two kind of pipes even can't light up when machine boot up, but reachable. I have tried many different monitor, all of them are black screen.
Our machine doesn't support DP and HDMI. I have asked my partner who owner this machine.
Today I find our machine can't resume from S3/S4, it hangs there. Turn back to test the kernel which I reported with, it also doesn't work now. Older kernels are bad too. I find a NOTOURBUG which is reported by Kobeqin, the result is the same with it: Bug #67731 - [Baytrail-M] system can't resume from S3/S4 .
(In reply to comment #5) > Today I find our machine can't resume from S3/S4, it hangs there. Turn back > to test the kernel which I reported with, it also doesn't work now. Older > kernels are bad too. I find a NOTOURBUG which is reported by Kobeqin, the > result is the same with it: Bug #67731 - [Baytrail-M] system can't resume > from S3/S4 . Sorry, our machine is unstable, S3/S4 are able to resume today. So this bug will not be blocked now. Further testing is on the way, if there's any issue, I will comment in the first time.
Can you give this patch a try? http://lists.freedesktop.org/archives/intel-gfx/2013-September/033970.html
(In reply to comment #7) > Can you give this patch a try? > > http://lists.freedesktop.org/archives/intel-gfx/2013-September/033970.html Test this patch on latest -next-queued, it works well. The monitor can display correctly when machine resume from S3.
commit 40e9cf649a88abea96d5756aa6f86e89cfabde6e Author: Jesse Barnes <jbarnes@virtuousgeek.org> Date: Thu Oct 3 11:35:46 2013 -0700 drm/i915/vlv: reset DPIO on load and resume v2 Note for the backlight we may still have an issue if the panel is on the second pipe.
(In reply to comment #9) > commit 40e9cf649a88abea96d5756aa6f86e89cfabde6e > Author: Jesse Barnes <jbarnes@virtuousgeek.org> > Date: Thu Oct 3 11:35:46 2013 -0700 > > drm/i915/vlv: reset DPIO on load and resume v2 > > Note for the backlight we may still have an issue if the panel is on the > second pipe. This issue is gone. verified here.
Closing old verified.
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.